# vapoursynth-mvtools-sf

./: CommonFunctions.h  CopyCode.hpp  DCT.h  DCT.hpp  DCTFFTW.cpp  DCTFFTW.hpp  EntryPoint.cpp  FakeBlockData.hpp  FakeGroupOfPlanes.cpp  FakeGroupOfPlanes.h  FakePlaneOfBlocks.cpp  FakePlaneOfBlocks.h  FakePlaneOfBlocks.hpp  GroupOfPlanes.cpp  Interpolation.h  MVAnalyze.cpp  MVBlockFPS.cpp  MVClip.h  MVCompensate.hxx  MVDegrains.cpp  MVDegrains.h  MVFilter.cpp  MVFilter.hpp  MVFlowBlur.cpp  MVFlowBlur.hxx  MVFlowFPS.cpp  MVFlowFPS.hxx  MVFlowInter.cpp  MVFlowInter.hxx  MVFrame.cpp  MVInterface.h  MVMask.hxx  MVRecalculate.cpp  MVSCDetection.hxx  MVSuper.cpp  MVSuper.h  MVSuper.hxx  Makefile.am  MaskFun.cpp  MaskFun.h  (+13 more)
legacy/: Makefile.am
legacy/src/: Cosmetics.hpp  DCTFFTW.hpp  EntryPoint.cpp  FakeBlockData.hpp  FakePlaneOfBlocks.hpp  GroupOfPlanes.cpp  GroupOfPlanes.h  MVCompensate.cpp  MVFinest.cpp  MVFlowBlur.cpp  MVFlowFPS.cpp  MVFlowInter.cpp  MVInterface.h  MVRecalculate.cpp  MVSuper.cpp  PlaneOfBlocks.cpp  Variance.hpp
src/: CommonFunctions.h  CopyCode.h  CopyCode.hpp  DCT.cpp  DCT.h  DCT.hpp  DCTFFTW.cpp  DCTFFTW.h  DCTFFTW.hpp  EntryPoint.cpp  EntryPoint.cxx  FakeBlockData.cpp  FakeBlockData.h  FakeBlockData.hpp  FakeGroupOfPlanes.cpp  FakeGroupOfPlanes.h  FakeGroupOfPlanes.hpp  FakePlaneOfBlocks.cpp  FakePlaneOfBlocks.h  FakePlaneOfBlocks.hpp  FakeSAD.h  GroupOfPlanes.cpp  GroupOfPlanes.h  Interpolation.h  MVAnalyze.cpp  MVAnalyze.hxx  MVBlockFPS.cpp  MVBlockFPS.hxx  MVClip.cpp  MVClip.h  MVClip.hpp  MVCompensate.cpp  MVCompensate.hxx  MVDegrain.hxx  MVDegrains.cpp  MVDegrains.h  MVFilter.cpp  MVFilter.h  MVFilter.hpp  MVFinest.cpp  (+39 more)
